@@ -6,7 +6,7 @@ namespace JambageCom\FhDebug\Hooks;
 /***************************************************************
 *  Copyright notice
 *
-*  (c) 2014 Franz Holzinger (franz@ttproducts.de)
+*  (c) 2016 Franz Holzinger (franz@ttproducts.de)
 *  All rights reserved
 *
 *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -30,7 +30,7 @@ namespace JambageCom\FhDebug\Hooks;
  * Core hooks used by the debug extension.
  *
  * @author	Franz Holzinger <franz@ttproducts.de>
- * $Id$
+ *
  */
 class CoreHooks {
 	public function preprocessRequest () {
@@ -82,7 +82,9 @@ class CoreHooks {
 	 * @return	void
 	 */
 	static public function devLog($devLogArray) {
-		if (get_class($GLOBALS['error']) == '\JambageCom\\FhDebug\\Utility\\DebugFunctions') {
+		$class = '\JambageCom\FhDebug\Utility\DebugFunctions';
+
+		if ($GLOBALS['error'] instanceof $class) {
 			debug($devLogArray, '$devLogArray');
 		}
 	}
