@@ -1,0 +1,25 @@
+Use this extension to debug the PHP code of TYPO3 and TYPO3 extensions in the Front End or Back End.
+Consider to also install debug_mysql_db if you want to debug the generated SQL queries or track the PHP errors in the table sys_log.
+
+The debug output is written into a HTML debug output file. All the configuration is done in the Extension Manager for fh_debug. You can design the output by the CSS file fhdebug.css.
+If you have a lot of debug output then you should put debugBegin and debugEnd commands around the PHP debug commands in order to have fewer debug output in the file. This will activate and deactivate the debug output.
+The TYPO3 devLog function is supported also.
+
+example:
+
+debugBegin();
+$a = 'myString';
+debug ($a, '$a at position 1');
+debugEnd();
+
+No debug output will be shown on the screen. Otherwise you must deactivate the debug output in the Install Tool. Just enter any invalid IP address:
+
+[SYS][devIPmask] = 1.1.1.1
+
+The Extension Manager configuration of fh_debug will be added to the IP address of the Install Tool.
+IPADDRESS = 34.22.11.12
+
+
+
+This extension has been written by Franz Holzinger.
+
