@@ -9,7 +9,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'PHP debugger and devLog Logger',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '0.5.3',
+	'version' => '0.5.4',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
@@ -28,8 +28,8 @@ $EM_CONF[$_EXTKEY] = array(
 	'CGLcompliance_note' => '',
 	'constraints' => array(
 		'depends' => array(
-			'php' => '5.3.0-5.6.99',
-			'typo3' => '6.0.0-7.4.99',
+			'php' => '5.3.0-7.99.99',
+			'typo3' => '6.0.0-7.99.99',
 		),
 		'conflicts' => array(
 		),
